...
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="nav_homepage">Home</string>
    <string name="nav_account_manage">Account Management</string>
    <string name="nav_transfer_funds">Transfer Funds</string>
    <string name="nav_activity_history">Activity History</string>
    <string name="nav_interest_calc">Interest Calculator</string>
    <string name="nav_support_chat">Support Chat</string>
    <string name="nav_logout">Logout</string>

    <!--For Home Fragment-->
    <string name="tvHome_accountNumber">Account Number</string>
    <string name="tvHome_accountBalance">Balance</string>
...
    <string name="tvActivityHistory_TransactionAmount">Transaction Amount</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvAccount_balance">Balance</string>
    <string name="IntCalc_FillAccountNumber" />
    <string name="tvIntCalc_PrincipalAmount">Principal</string>
    <string name="etIntCalc_FillPrincipalAmount">Enter principal amount</string>
    <string name="tvIntCalc_Period">Period</string>
    <string name="etIntCalc_FillYear">Years</string>
    <string name="tvIntCalc_Date">Enter Number</string>
    <string name="tvIntCalc_CreditScore">Credit Score</string>
    <string name="tvIntCalc_FillCreditScore" />
    <string name="btnIntCalc_Calc">Calculate</string>
    <string name="Excellent">Excellent</string>
    <string name="Good">Good</string>
    <string name="Fair">Fair</string>
    <string name="Bad">Bad</string>
    <string name="tvIntCalc_Interest">Interest </string>
    <string name="tvIntCalc_FillInterest" />
    <string name="tvIntCalc_RateOfInterest">Rate Of Interest </string>
    <string name="tvIntCalc_FillRateOfInterest" />
    <string name="tvIntCalc_Percent">"%"</string>

    <!--For Chat Fragment-->
    <string name="chatUploadSuccess">File upload successful</string>
    <string name="chatUploadFailure">File upload failed</string>
    <string name="chatThankYou">Thank you for your message</string>
...
