...
            android:layout_marginTop="19dp"
            android:padding="5dp"
            android:text="@string/tvIntCalc_Period"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etIntCalc_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
...
